Update README.org and packages.el

--- a/README.org
+++ b/README.org
@@ -1,17 +1,17 @@
 #+TITLE: Japanese layer
 #+HTML_HEAD_EXTRA: <link rel="stylesheet" type="text/css" href="../../css/readtheorg.css" />
 * Table of Contents                                         :TOC_4_org:noexport:
- - [[Description][Description]]
- - [[Install][Install]]
-   - [[Layer][Layer]]
-   - [[Configuration][Configuration]]
-     - [[evil-tutor-ja][evil-tutor-ja]]
-     - [[migemo][migemo]]
-     - [[helm-with-migemo][helm-with-migemo]]
-     - [[avy-migemo][avy-migemo]]
-     - [[ddskk][ddskk]]
-     - [[pangu-spacing][pangu-spacing]]
- - [[Key Bindings][Key Bindings]]
+- [[Description][Description]]
+- [[Install][Install]]
+  - [[Layer][Layer]]
+  - [[Configuration][Configuration]]
+    - [[evil-tutor-ja][evil-tutor-ja]]
+    - [[migemo][migemo]]
+    - [[helm-with-migemo][helm-with-migemo]]
+    - [[avy-migemo][avy-migemo]]
+    - [[ddskk][ddskk]]
+    - [[pangu-spacing][pangu-spacing]]
+- [[Key Bindings][Key Bindings]]
 
 * Description    
 This Layer adds Japanese related packages:
@@ -34,44 +34,49 @@ file.
    For a basic configuration, add this to your =~/.spacemacs= inside
    ~dotspacemacs/user-config~:
 *** evil-tutor-ja
-By default, the variable ~evil-tutor-working-ja-directory~ is assigned =~.emacs.d/.tutor-ja=.
+By default, the variable ~evil-tutor-working-ja-directory~ is assigned =~/.emacs.d/.tutor-ja=.
 *** migemo
 By default, the variable ~migemo-dictionary~ is assigned
-~/usr/local/share/migemo/utf-8/migemo-dict~. If you want it to be another
-directory, you must re-set the variable. For example, if you install ~cmigemo~
-using
-#+BEGIN_SRC bash
-sudo apt-get install cmigemo
-#+END_SRC
-in ubuntu, you should add:
+~/usr/local/share/migemo/utf-8/migemo-dict~ in MacOS, or ~/usr/local/cmigemo/utf-8/migemo-dict~ in linux. 
+If you want it to be another directory, you must re-set the variable. 
+For example, if you install ~cmigemo~ in the directory ~c:\app\cmigemo-default-win64~ in Windows 64bit, you should add:
 #+BEGIN_SRC emacs-lisp
   (with-eval-after-load "migemo"
-    (setq migemo-dictionary "/usr/local/cmigemo/utf-8/migemo-dict"))
+    (setq migemo-dictionary "c:/app/cmigemo-default-win64/dict/utf-8/migemo-dict"))
 #+END_SRC
-inside ~dotspacemacs/user-config~.
+inside ~dotspacemacs/user-config~
+#+begin_src emacs-lisp
+(japanese :variables
+          migemo-dictionary "c:/app/cmigemo-default-win64/dict/utf-8/migemo-dict")
+#+end_src
+inside ~dotspacemacs-configuration-layers~.
 *** helm-with-migemo
 If you want to use helm with migemo, you should add:
 #+BEGIN_SRC emacs-lisp
-  (with-eval-after-load "helm"
+  (with-eval-after-load "migemo"
     (helm-migemo-mode 1))
 #+END_SRC
-inside ~dotspacemacs/user-config~. Note that you may find in a package called
+inside ~dotspacemacs/user-config~. Alternatively
+#+begin_src emacs-lisp
+   (japanese :variables
+              helm-migemo-mode 1)
+#+end_src
+inside ~dotspacemacs-configuration-layers~. Note that you may find in a package called
 ~helm-migemo.el~ in MELPA. However, this package is deprecated and not supported
 by helm.
 *** avy-migemo
-By default, you can use ~migemo~ for ~avy.el~. For ~ivy.el~, you should add:
+Note that ~avy-migemo~ in ELPA does not work
+currently, so you can use a [[https://github.com/tam17aki/avy-migemo][forked version]] alternatively.
+
+By default, you can use ~avy-migemo~ for ~helm-mode~. For ~ivy-mode~, you should add:
 #+BEGIN_SRC emacs-lisp
-(require 'avy-migemo-e.g.ivy)
+(with-eval-after-load "migemo"
+  (require 'avy-migemo-e.g.ivy)
+  (require 'avy-migemo-e.g.swiper)
+  (require 'avy-migemo-e.g.counsel))
 #+END_SRC
-inside ~dotspacemacs/user-config~. For ~swiper.el~, you should add:
-#+BEGIN_SRC emacs-lisp
-(require 'avy-migemo-e.g.swiper)
-#+END_SRC
-inside ~dotspacemacs/user-config~. For ~counsel.el~, you should add:
-#+BEGIN_SRC emacs-lisp
-(require 'avy-migemo-e.g.counsel)
-#+END_SRC
-inside ~dotspacemacs/user-config~.
+inside ~dotspacemacs/user-config~. 
+
 *** ddskk
 You can write a configuration file ~​~/.skk~. For detailed configuration, see
 some [[http://openlab.ring.gr.jp/skk/doc.html][documents]].
