--- a/README.org
+++ b/README.org
@@ -13,7 +13,7 @@
     - [[pangu-spacing][pangu-spacing]]
 - [[Key Bindings][Key Bindings]]
 
-* Description    
+* Description
 This Layer adds Japanese related packages:
 - [[https://github.com/kenjimyzk/evil-tutor-ja][evil-tutor-ja]]: Japanese Vimtutor adapted to Emacs+Evil and wrapped in a major mode
 - [[https://github.com/emacs-jp/migemo][migemo]]: Japanese incremental search through dynamic pattern expansion
@@ -51,31 +51,11 @@ inside ~dotspacemacs/user-config~, or
 #+end_src
 inside ~dotspacemacs-configuration-layers~.
 *** helm-with-migemo
-If you want to use helm with migemo, you should add:
-#+BEGIN_SRC emacs-lisp
-  (with-eval-after-load "migemo"
-    (helm-migemo-mode 1))
-#+END_SRC
-inside ~dotspacemacs/user-config~, or
-#+begin_src emacs-lisp
-   (japanese :variables
-              helm-migemo-mode 1)
-#+end_src
-inside ~dotspacemacs-configuration-layers~. Note that you may find in a package called
-~helm-migemo.el~ in MELPA. However, this package is deprecated and not supported
-by helm.
+Note that you may find in a package called ~helm-migemo.el~ in MELPA. However,
+this package is deprecated and not supported by helm.
 *** avy-migemo
 Note that ~avy-migemo~ in ELPA does not work
-currently, so you can use a [[https://github.com/tam17aki/avy-migemo][forked version]] alternatively.
-
-By default, you can use ~avy-migemo~ for ~helm-mode~. For ~ivy-mode~, you should add:
-#+BEGIN_SRC emacs-lisp
-(with-eval-after-load "migemo"
-  (require 'avy-migemo-e.g.ivy)
-  (require 'avy-migemo-e.g.swiper)
-  (require 'avy-migemo-e.g.counsel))
-#+END_SRC
-inside ~dotspacemacs/user-config~. 
+currently, so we use a [[https://github.com/tam17aki/avy-migemo][forked version]] alternatively.
 *** ddskk
 You can write a configuration file ~​~/.skk~. For detailed configuration, see
 some [[https://skk-dev.github.io/ddskk/skk.html][documents]].
